@@ -1,4 +1,4 @@
-/*	$NetBSD: privsep.c,v 1.14 2008/08/06 19:14:28 tteras Exp $	*/
+/*	$NetBSD: privsep.c,v 1.15 2008/10/23 10:56:10 tteras Exp $	*/
 
 /* Id: privsep.c,v 1.15 2005/08/08 11:23:44 vanhu Exp */
 
@@ -67,11 +67,9 @@
 #include "remoteconf.h"
 #include "admin.h"
 #include "sockmisc.h"
-#include "session.h"
 #include "privsep.h"
 
 static int privsep_sock[2] = { -1, -1 };
-static pid_t child_pid;
 
 static int privsep_recv(int, struct privsep_com_msg **, size_t *);
 static int privsep_send(int, struct privsep_com_msg *, size_t);
@@ -138,34 +136,6 @@ privsep_recv(sock, bufp, lenp)
 	*bufp = NULL;
 	*lenp = 0;
 
-	/* Handle unprivileged process termination */
-	if (child_pid) {
-		fd_set fdmask;
-		int rv, nfds;
-
-		FD_ZERO(&fdmask);
-		FD_SET(sock, &fdmask);
-
-		nfds = sock;
-		nfds++;
-
-		while(1) {
-			/* Use select here as it can be interrupted by a signal */
-			rv = select(nfds, &fdmask, (fd_set *)0, (fd_set *)0, (struct timeval *)0);
-
-			/* There is something ready to receive */
-			if (rv > 0)
-				break;
-
-			/* Error condition or SIGCHLD was received */
-			if (rv < 0 || get_sigreq(SIGCHLD))
-				return -1;
-
-			/* Ignore different signals */
-			continue;
-		}
-	}
-
 	/* Get the header */
 	while ((len = recvfrom(sock, (char *)&com, 
 	    sizeof(com), MSG_PEEK, NULL, NULL)) == -1) {
@@ -228,6 +198,7 @@ int
 privsep_init(void)
 {
 	int i;
+	pid_t child_pid;
 
 	/* If running as root, we don't use the privsep code path */
 	if (lcconf->uid == 0)
@@ -336,6 +307,17 @@ privsep_init(void)
 	setproctitle("[priv]");
 #endif
 	
+	/*
+	 * Don't catch any signal
+	 * This duplicate session:signals[], which is static...
+	 */
+	signal(SIGHUP, SIG_DFL);
+	signal(SIGINT, SIG_DFL);
+	signal(SIGTERM, SIG_DFL);
+	signal(SIGUSR1, SIG_DFL);
+	signal(SIGUSR2, SIG_DFL);
+	signal(SIGCHLD, SIG_DFL);
+
 	while (1) {
 		size_t len;
 		struct privsep_com_msg *combuf;
